--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,11 @@ anyhow = "1.0.95"
 prost = { version = "0.13.4", optional = true }
 
 [build-dependencies]
+convert_case = "0.7.1"
+dotenvy = "0.15.7"
 prost-build = { version = "0.13.4", optional = true }
+serde = { version = "1.0.217", features = ["derive"] }
+serde_json = "1.0.138"
 
 [dev-dependencies]
 serde_json = "1.0.138"
