--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,8 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = ["protobuf>=6.32.1", "pyyaml>=6.0.3"]
+dependencies = [
+    "protobuf>=6.32.1",
+    "python-dotenv>=1.1.1",
+    "pyyaml>=6.0.3",
+]
