add: add msgpack support

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 FSD_BINARY_DIR=/home/admin/develop/eve-fit-os/data/fsd
+FSD_FORMAT=msgpack # msgpack or json
 FSD_LOC_EN_DIR=/home/admin/develop/eve-fit-os/data/fsd-localization/localization_fsd_en-us.pickle
 OUTPUT_DIR=/home/admin/develop/eve-fit-os/data/out
