--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "msgpack>=1.1.1",
     "protobuf>=6.32.1",
     "python-dotenv>=1.1.1",
     "pyyaml>=6.0.3",
